tests/paczka1/small_fuzzy/43526200.err
Error in line 2: 32YcETxv A728 80,37
Error in line 11: S98 S98 4,4
Error in line 4: Gaer6 S668 87,1
Error in line 15: UeDgocjRSo S451 1,8
